--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,8 +1,9 @@
 .cover__background {
+    box-sizing: content-box;
     width: 100%;
     height: 100%;
     background-image: url(../../../images/cover-trains.jpg);
-    background-size: cover;
+    background-size: 100% 100%;
     opacity: 0.7;
     position: absolute;
     top:0px;
