--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,6 +1,6 @@
 .cover__subtitle {
     max-width: 360px;
-    margin: 0;
+    margin: 0 0 9px;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
@@ -8,4 +8,11 @@
     text-align: center;
     position: relative;
     z-index: 1;
+}
+
+@media screen and (max-width:767px){
+    .cover__subtitle {
+        font-size: 14px;
+        line-height: 16px;
+    }
 }
