--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,9 +1,31 @@
 .cover {
-    max-width: 1184px;
-    height: 740px;
+    max-width: 100%;
+    min-height: 740px;
+    margin: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     position: relative;
+    text-decoration: none;
+    color: white;
+}
+
+@media screen and (max-width:1279px) {
+    .cover {
+        max-width: 100%;
+        min-height: 640px;
+    }
+}
+
+@media screen and (max-width:1023px) {
+    .cover {
+        min-height: 480px;
+    }
+}
+
+@media screen and (max-width:767px){
+    .cover {
+        min-height: 200px;
+    }
 }
