--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -5,3 +5,9 @@
     font-size: 14px;
     line-height: 16px;
 }
+
+@media screen and (max-width:787px) {
+    .footer__copyright {
+        margin-left: 0;
+    }
+}
