--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    max-width: 1184px;
+    max-width: 92.5%;
     margin: 92px auto 0px;
     padding: 0px 0px 18px;
     list-style-type: none;
@@ -7,4 +7,13 @@
     flex-direction: row;
     justify-content: flex-start;
     gap: 18px;
+}
+
+@media screen and (max-width:787px) {
+    .footer {
+        flex-direction: column;
+        margin: 92px 16px 0px;
+        padding: 0px 0px 24px;
+        gap: 32px
+    }
 }
