--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -5,6 +5,7 @@
     font-size: 24px;
     line-height: 28px;
     text-decoration: none;
+    text-align: right;
     color: white;
     justify-self: flex-end;
     opacity: 1;
@@ -18,4 +19,11 @@
 
 .header__lang-link:hover {
     opacity: .3;
+}
+
+@media screen and (max-width:768px){
+    .header__lang-link {
+    font-size: 18px;
+    line-height: 20px;
+    }
 }
