--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,3 +1,9 @@
 .header__logo {
-    justify-self: center;
+    max-width: 176px;
+}
+
+@media screen and (max-width: 420px) {
+    .header__logo {
+        max-width: 142px;
+    }
 }
