--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -8,3 +8,10 @@
     font-size: 12px;
     line-height: 18px;
 }
+
+@media screen and (max-width:768px){
+    .intro__list {
+        font-size: 12px;
+        line-height: 18px;
+    }
+}
