--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -6,3 +6,10 @@
     font-size: 16px;
     line-height: 163%;
 }
+
+@media screen and (max-width:768px){
+    .intro__text {
+        font-size: 16px;
+        line-height: 163%;
+    }
+}
