--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,3 +2,15 @@
     max-width: 984px;
     margin: 92px auto 0;
 }
+
+@media screen and (max-width:1023px) {
+    .intro {
+        margin: 92px 24px 0;
+    }
+}
+
+@media screen and (max-width:767px){
+    .intro {
+        margin: 92px 16px 0;
+    }
+}
