--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,9 +1,22 @@
 .lead__caption {
-    max-width: 158px;
     margin: 0;
     font-style: normal;
     font-weight: normal;
     font-size: 10px;
     line-height: 14px;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
     text-align: start;
+}
+
+@media screen and (max-width:1023px) {
+    .lead__caption {
+        margin-left: 24px;
+    }
+}
+
+@media screen and (max-width:767px){
+    .lead__caption {
+        margin-left: 16px;
+    }
 }
