--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,6 +1,6 @@
 .lead__image {
     margin: 64px auto 8px;
-    max-width: 984px;
+    max-width: 100%;
     max-height: 615px;
     text-align: center;
 }
