--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -6,3 +6,10 @@
     font-size: 30px;
     line-height: 36px;
 }
+
+@media screen and (max-width:768px){
+    .lead__subtitle {
+        font-size: 16px;
+        line-height: 20px;
+    }
+}
