--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -3,3 +3,9 @@
     margin: 0 auto;
     text-align: center;
 }
+
+@media screen and (max-width:1024px) {
+    .lead {
+        max-width: 100%;
+    }
+}
