--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,24 @@
     min-width: 1280px;
     background-color: #2A2C2F;
     margin: 0 auto;
-    font-family: Inter;
+    font-family:'Inter', Arial, sans-serif;
     color: white;
+}
+
+@media screen and (max-width:1279px) {
+    .page {
+        min-width: 1024px;
+    }
+}
+
+@media screen and (max-width:1023px) {
+    .page {
+        min-width: 768px;
+    }
+}
+
+@media screen and (max-width:767px){
+    .page {
+        min-width: 320px;
+    }
 }
