--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,7 +2,30 @@
     max-width: 1184px;
     margin: 92px auto;
     display: grid;
-    grid-template-columns: repeat(4, 284px);
-    grid-template-rows: repeat(3, 213px);
+    grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
     gap: 16px;
+}
+
+@media screen and (max-width:1279px) {
+    .photo-grid {
+        margin: 92px auto;
+        max-width: 928px;
+        gap: 14px;
+    }
+}
+
+@media screen and (max-width:1023px) {
+    .photo-grid {
+        margin: 92px auto;
+        max-width: 720px;
+        gap: 16px;
+    }
+}
+
+@media screen and (max-width:767px){
+    .photo-grid {
+        margin: 92px auto;
+        max-width: 288px;
+        gap: 12px;
+    }
 }
