--- a/blocks/place/__website/__url-heading/place__website__url-heading.css
+++ b/blocks/place/__website/__url-heading/place__website__url-heading.css
@@ -3,5 +3,7 @@
     font-weight: normal;
     font-size: 12px;
     line-height: 12px;
+    letter-spacing: 2px;
     margin: 0 0 12px;
+    color: #AAAAAA;
 }
