--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -2,3 +2,10 @@
     max-height: 46px;
     align-self: end;
 }
+
+@media screen and (max-width:767px){
+    .place__website {
+        max-width: 288px;
+        margin: 0 16px;
+    }
+}
