--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -4,3 +4,21 @@
     padding: 0;
     list-style-type: none;
 }
+
+@media screen and (max-width:1279px) {
+    .places {
+        max-width: 928px;
+    }
+}
+
+@media screen and (max-width:1023px) {
+    .places {
+        max-width:720px;
+    }
+}
+
+@media screen and (max-width:767px){
+    .places {
+        max-width: 320px;
+    }
+}
