--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -14,6 +14,6 @@
         flex-direction: column;
         margin: 92px 16px 0px;
         padding: 0px 0px 24px;
-        gap: 32px
+        gap: 32px;
     }
 }
