--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,6 +1,7 @@
 .content {
-    max-width: 92.5%;
+    max-width: 1184px;
     margin: 0 auto;
+    box-sizing: border-box;
 }
 
 @media screen and (max-width:1279px) {
