--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,14 +1,15 @@
 .cover__overlay {
     width: 100%;
     height: 100%;
+    background-color: black;
+    background-size: 100% 100%;
     position: absolute;
     top: 0px;
     z-index: 0;
-    background-color: black;
     opacity: 0;
     transition: opacity .5s linear;
 }
 
 .cover__overlay:hover {
-    opacity: 0.5;
+    opacity: .5;
 }
