--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -8,6 +8,8 @@
     text-align: center;
     position: relative;
     z-index: 1;
+    text-decoration: none;
+    color: white;
 }
 
 @media screen and (max-width:767px){
