--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,10 +6,11 @@
     font-size: 72px;
     line-height: 76px;
     text-align: center;
-
     position: relative;
     z-index: 1;
-
+    opacity: 1;
+    text-decoration: none;
+    color: white;
 }
 
 @media screen and (max-width:767px){
