--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,5 +1,5 @@
 .footer__copyright {
-    margin-left: auto;
+    margin: 0;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
