--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,8 +1,9 @@
 .header__logo {
     max-width: 176px;
+    height: 52px;
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 767px) {
     .header__logo {
         max-width: 142px;
     }
