--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,22 @@
 .header {
-    max-width: 92.5%;
+    max-width: 1184px;
+    min-height: 52px;
     padding-top: 28px;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: space-between;
     align-items: end;
+}
+
+@media screen and (max-width:1279px) {
+    .header {
+        max-width: 928px;
+    }
+}
+
+@media screen and (max-width:1023px) {
+    .header {
+        max-width: 100%;
+    }
 }
