--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,7 +4,13 @@
     text-align: center;
 }
 
-@media screen and (max-width:1024px) {
+@media screen and (max-width:1279px) {
+    .lead {
+        max-width: 928px;
+    }
+}
+
+@media screen and (max-width:1023px) {
     .lead {
         max-width: 100%;
     }
