--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,25 +1,27 @@
 .page {
-    min-width: 1280px;
+    max-width: 1280px;
     background-color: #2A2C2F;
     margin: 0 auto;
+    padding: 0;
+    box-sizing: border-box;
     font-family:'Inter', Arial, sans-serif;
     color: white;
 }
 
 @media screen and (max-width:1279px) {
     .page {
-        min-width: 1024px;
+        max-width: 1024px;
     }
 }
 
 @media screen and (max-width:1023px) {
     .page {
-        min-width: 768px;
+        max-width: 768px;
     }
 }
 
 @media screen and (max-width:767px){
     .page {
-        min-width: 320px;
+        max-width: 320px;
     }
 }
