--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -15,6 +15,6 @@
 @media screen and (max-width:767px){
     .place__paragraph {
         max-width: 288px;
-        margin: 0 16px;
+        margin: 0 16px 26px;
     }
 }
