--- a/blocks/place/__website-link/place__website-link.css
+++ b/blocks/place/__website-link/place__website-link.css
@@ -1,4 +1,4 @@
-.place__website_link {
+.place__website-link {
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
@@ -9,6 +9,6 @@
     transition: opacity .5s linear;
 }
 
-.place__website_link:hover{
+.place__website-link:hover {
     opacity: .3;
 }
