--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,20 +1,22 @@
 .place {
-    max-width: 984px;
-    margin-bottom: 80px;
+    max-width: 100%;
+    margin: 0px 0px 80px;
     display: grid;
     grid-template-columns: 460px 484px;
-    gap: 40px 48px;
+    gap: 48px 40px;
 }
 
 @media screen and (max-width:1279px) {
     .place {
         grid-template-columns: 440px 456px;
+        gap: 48px 32px;
     }
 }
 
 @media screen and (max-width:1023px) {
     .place {
         grid-template-columns: 340px 352px;
+        gap: 48px 28px;
     }
 }
 
