--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,7 @@
+/* Подключение шрифта Inter */
+
+@import url(../fonts/fonts.css);
+
 /* Подключение стиля normalize.css */
 
 @import url(../vendor/normalize.css);
@@ -10,7 +14,9 @@
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__lang-list/header__lang-list.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
+@import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
 
 /* Подключение блока content */
 
@@ -30,6 +36,7 @@
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__text-bold/intro__text-bold.css);
 
 /* Подключение блока photo-grid */
 
@@ -43,20 +50,23 @@
 @import url(../blocks/place/__title/place__title.css);
 @import url(../blocks/place/__image/place__image.css);
 @import url(../blocks/place/__website/place__website.css);
-@import url(../blocks/place/__website/_url-heading/place__website_url-heading.css);
-@import url(../blocks/place/__website/_link/place__website_link.css);
+@import url(../blocks/place/__website-url-heading/place__website-url-heading.css);
+@import url(../blocks/place/__website-link/place__website-link.css);
+@import url(../blocks/place/__paragraphs/place__paragraphs.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
 
 /* Подключение блока cover */
 
 @import url(../blocks/cover/cover.css);
-@import url(../blocks/cover/__title/cover__title.css);
-@import url(../blocks/cover/__subtitle/cover__subtitle.css);
 @import url(../blocks/cover/__background/cover__background.css);
 @import url(../blocks/cover/__overlay/cover__overlay.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
+
 
 /* Подключение блока footer */
 
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__navigation-list/footer__navigation-list.css);
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
