Второе исправление замечаний ревью

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -20,3 +20,10 @@
         max-width: 100%;
     }
 }
+
+@media screen and (max-width:767px) {
+    .header {
+        max-width: 288px;
+        padding-top: 16px;
+    }
+}
