--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -13,3 +13,11 @@
 .footer__link:hover {
     opacity: .3;
 }
+
+@media screen and (max-width:767px) {
+    .footer__link {
+        font-size: 24px;
+        line-height: 24px;
+    }
+    
+}
