--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -11,7 +11,7 @@
 @media screen and (max-width:787px) {
     .footer {
         flex-direction: column;
-        margin-left: 16px;
+        margin: 64px 0px 0px 16px;
         gap: 32px;
     }
 }
