--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,5 +1,5 @@
 .place__paragraph {
-    margin: 0 0 26px;
+    margin: 0;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
@@ -14,7 +14,6 @@
 
 @media screen and (max-width:767px){
     .place__paragraph {
-        max-width: 288px;
-        margin: 0 16px 26px;
+        max-width: 100%;
     }
 }
