--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,9 +1,13 @@
 .place__paragraphs {
     max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
 }
 
 @media screen and (max-width:767px){
     .place__paragraphs {
         max-width: 288px;
+        margin: 0 16px 0;
     }
 }
