--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -15,6 +15,7 @@
 
 @media screen and (max-width:1023px) {
     .place {
+        margin: 0 0 72px;
         grid-template-columns: 340px 352px;
         gap: 48px 28px;
     }
@@ -22,6 +23,8 @@
 
 @media screen and (max-width:767px){
     .place {
+        margin: 0 0 50px;
         grid-template-columns: 320px;
+        gap: 32px;
     }
 }
